--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,9 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@mui/material": "^5.1.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "socket.io-client": "^4.3.2"
   }
 }
