--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,29 @@
 {
-  "dependencies": {
-    "express": "^4.17.1",
-    "socket.io": "^4.3.2"
-  }
+    "name": "groupomania-backend",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www",
+        "nodemon": "nodemon start"
+    },
+    "dependencies": {
+        "bcrypt": "^5.0.1",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
+        "express": "~4.16.1",
+        "jsonwebtoken": "^8.5.1",
+        "multer": "^1.4.3",
+        "mysql": "^2.18.1",
+        "mysql2": "^2.3.3",
+        "passport": "^0.5.0",
+        "passport-jwt": "^4.0.0",
+        "passport-local": "^1.0.0",
+        "sequelize": "^6.9.0",
+        "sequelize-cli": "^6.3.0",
+        "socket.io": "^4.3.2"
+    },
+    "devDependencies": {
+        "dotenv": "^10.0.0",
+        "nodemon": "^2.0.14"
+    }
 }
