--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "compression-webpack-plugin": "^9.0.0",
     "copy-webpack-plugin": "^9.1.0",
     "css-loader": "^6.5.1",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.3.1",
     "mini-css-extract-plugin": "^2.4.4",
