--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "webpack-dev": "webpack serve --config webpack.dev.js --open-app-name 'google-chrome' --stats-error-details",
     "webpack-build": "webpack --config webpack.prod.js",
-    "deploy": "serve -s dist -l 8080",
-    "test": "jest"
+    "start": "serve -s dist -l 8080",
+    "all": "concurrently \"npm start\" \"cd ../server && npm start\""
   },
   "keywords": [],
   "author": "",
@@ -20,17 +20,14 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@babel/runtime": "^7.16.3",
-    "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "compression-webpack-plugin": "^9.0.0",
+    "concurrently": "^6.4.0",
     "copy-webpack-plugin": "^9.1.0",
     "css-loader": "^6.5.1",
-    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^27.3.1",
     "mini-css-extract-plugin": "^2.4.4",
-    "react-test-renderer": "^17.0.2",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.2.5",
     "webpack": "^5.64.0",
