--- a/server/package.json
+++ b/server/package.json
@@ -15,12 +15,8 @@
         "multer": "^1.4.3",
         "mysql": "^2.18.1",
         "mysql2": "^2.3.3",
-        "passport": "^0.5.0",
-        "passport-jwt": "^4.0.0",
-        "passport-local": "^1.0.0",
         "sequelize": "^6.9.0",
-        "sequelize-cli": "^6.3.0",
-        "socket.io": "^4.3.2"
+        "sequelize-cli": "^6.3.0"
     },
     "devDependencies": {
         "dotenv": "^10.0.0",
